@@ -8,4 +8,4 @@ IF NOT EXIST workspace\.metadata (
     copy conf\initial-data-sources.conf workspace\GlobalConfiguration\.dbeaver\data-sources.json
 )
 
-java %JAVA_OPTS% -jar %launcherJar% -product io.cloudbeaver.product.ce.product -web-config conf/cloudbeaver.conf -nl en -registryMultiLanguage
+java %JAVA_OPTS% --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED -jar %launcherJar% -product io.cloudbeaver.product.ce.product -web-config conf/cloudbeaver.conf -nl en -registryMultiLanguage
